VP 9.2.0 Changelog
------------------------
- add 'real' primitives, these can be loaded via .obj files (for example exported out of Blender)
- add lighting option for primitives
- add selection dialog where you can select one or more elements out of a list of all elements in the table
- add configurable lightsources: point, directional, spot; these share the same coordinate system as the table geometry (angle/rotation/scale independent! setting the direction of a directional light to 0,0,0 restores the old behavior though)
  (note that DX7 is still vertex lighting based, thus all lit objects MUST feature reasonable triangulation, like f.e. huge walls (the playfield itself is triangulated 100x100))
- add exact lighting option to table (if you experience lighting problems with ramps, primitives or the ball, please enable this)
- add flag to walls and gates to disable lighting and shadows (to assist in using fully artist driven lighting)
- add flag to light objects to disable the lighting calculations when the 'On Image' is set (so that behavior is the same as when only using a color)
- add flag for alpha ramps to optionally use additive blending (to cope with 2D-lighting-hacks like halos/flashers)
- add layering of table elements
- add per-table sound & music volume settings (0..100% scaling of the global VP settings)
- add easy selection mode if you right-click on an element in the context menu you can select those elements which are stacked under the mouse cursor
- add drawing order. If you click on an element all elements which are over/under that clicked element are shown in a list box. You can move elements up/down to change the drawing order
- add reflection option for balls per table. If you enable this option the ball is mirrored on the table. With reflection strength you can define how much the ball will reflect. 
  If the value is too high the mirror effect will look odd.