@@ -851,8 +851,9 @@ BEGIN
     COMBOBOX        8,33,46,85,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Apply Ima&ge to Walls",9,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,63,82,10
     CONTROL         "Custom2",5,"ColorControl",WS_TABSTOP,27,88,40,14
-    CONTROL         "Casts Shadow",107,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,106,61,10
+    CONTROL         "Shadows",107,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,106,61,10
     CONTROL         "Visible",112,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,118,40,10
+    CONTROL         "Update Regions",IDC_UPDATEREGIONS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,54,106,70,10
     CONTROL         "Normal 3D Stereo",IDC_MODIFY3DSTEREO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,54,118,70,10
     LTEXT           "(only disable for",-1,68,128,70,10
     LTEXT           " 2D-hacks like",-1,68,138,70,10
@@ -1539,7 +1540,7 @@ BEGIN
     LTEXT           "ObjRotZ",IDC_STATIC,69,276,35,10
 END
 
-IDD_PROPPRIMITIVE_VISUALS DIALOGEX 0, 0, 125, 168
+IDD_PROPPRIMITIVE_VISUALS DIALOGEX 0, 0, 125, 170
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -1548,7 +1549,8 @@ BEGIN
     CONTROL         "Custom2",102,"ColorControl",WS_TABSTOP,74,78,40,14
     CONTROL         "Custom2",104,"ColorControl",WS_TABSTOP,74,93,40,14
     CONTROL         "Visible",103,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,108,76,10
-    CONTROL         "Draw Textures inside",106,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,121,82,10
+    CONTROL         "Update Regions",IDC_UPDATEREGIONS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,118,76,10
+    CONTROL         "Draw Textures inside",106,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,128,82,10
     LTEXT           "Image",IDC_STATIC,7,21,20,8
     LTEXT           "Top/Bottom &Color",IDC_STATIC,7,80,63,9
     LTEXT           "Side &Color",IDC_STATIC,7,95,63,9
@@ -1556,9 +1558,9 @@ BEGIN
     GROUPBOX        "3D Mesh",IDC_STATIC,7,44,111,30
     PUSHBUTTON      "Import Mesh",IDC_LOAD_MESH_BUTTON,11,54,48,14
     PUSHBUTTON      "Export Mesh",IDC_EXPORT_MESH_BUTTON,65,54,46,14
-    CONTROL         "Enable lighting",IDC_CHECK_PRIMITIVE_LIGHTING,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,133,66,10
-    CONTROL         "Static Rendering",IDC_STATIC_RENDERING_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,155,69,10
-    CONTROL         "Sphere Map 3D Mesh",IDC_PRIM_ENV_MAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,144,85,10
+    CONTROL         "Enable lighting",IDC_CHECK_PRIMITIVE_LIGHTING,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,138,66,10
+    CONTROL         "Static Rendering",IDC_STATIC_RENDERING_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,158,69,10
+    CONTROL         "Sphere Map 3D Mesh",IDC_PRIM_ENV_MAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,148,85,10
 END
 
 IDD_PROPPLUNGER_VISUALS DIALOGEX 0, 0, 127, 79
